# CellAnalyzer

./: .gitignore  DATACLASS_IMPLEMENTATION_GUIDE.md  INSTALLATION.md  MANIFEST.in  MeshGenerationScript.m  Notebook_IMG_Preprocess.mlx  README.md  Result_visualisation.py  ThreeLevelSegmentation_Preprocessing_Script.m  Triangle_view_Mesh.py  pyproject.toml  test.py  u_shape3d_preprocessing_bleb3d.py
.claude/: settings.local.json
CellAnalyzer/: __init__.py  analysis.py  analyzer.py  datatypes.py  io.py  visualization.py
CellAnalyzer/tests/: __init__.py  test_cellanalyzer.py
Example/: test.py
Experimental/: Soma_Anootator.py  fix_focused_animation.py  mesh_generation_movie.py  neurite_spatial_analysis.py  neurite_spatial_analysis_presentation.py
Experimental/RotatingMeshMovies/: publication_figures.py  rotating_mesh_movie.py  rotation_series_24hKO.py
Matlab_Pipeline/: MeshGenerationScript.m  MeshGeneration_externalMask.m  Notebook_IMG_Preprocess.mlx  ThreeLevelSegmentation_Preprocessing_Script.m  trainFiloStructures_Final.m
MeshAnalyzer/: README.md  __init__.py  analyzer.py  datatypes.py  io.py  timeseries.py  utils.py  visualization.py
MeshAnalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MeshAnalyzer/tests/: __init__.py  test_timeseries.py
Surface_Extraction/: MeshGenerationScript.m
mesh_analysis/: analyzer.py  io.py  utils.py  visualization.py
