[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CellAnalyzer"
version = "2.0.0"
description = "Quantitative 3D morphology analysis for cell surface reconstructions from LLSM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Philipp Kaintoch", email = "your.email@example.com"}
]
keywords = ["mesh", "3d-analysis", "microscopy", "cell-biology", "morphology"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "vedo>=2023.4.0",
    "mat73>=0.59",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/philius19/CellAnalyzer"
Documentation = "https://cellanalyzer.readthedocs.io"
Repository = "https://github.com/philius19/CellAnalyzer.git"
"Bug Tracker" = "https://github.com/philius19/CellAnalyzer/issues"

[tool.setuptools]
# Automatically discover packages
packages = {find = {where = ["."], include = ["CellAnalyzer*"], exclude = ["tests*", "Example*", "Notebooks*", "Experimental*"]}}

[tool.setuptools.package-data]
CellAnalyzer = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=CellAnalyzer --cov-report=html --cov-report=term"
